[package]
name = "subtitle_tonemap"
version = "1.0.0"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["derive", "wrap_help", "deprecated"] }
image = "0.25.10"
rayon = "1.12.0"
